# discord_analysis

./: .gitignore  README.md  analysis.py  prompt.md  pyproject.toml
discord_analysis/: __main__.py  extractor.py  models.py  sentiment.py
notebooks/: analysis.py
